--- a/01-cv-portfolio/css/responsive.css
+++ b/01-cv-portfolio/css/responsive.css
@@ -22,7 +22,7 @@
 	4. INTRO SECTION
 	--------------------------------- */
 
-	.intro-section{ padding-top: 250px; }
+	.intro-section{ padding-top: 150px; }
 	
 }
 
@@ -55,7 +55,7 @@
 	4. INTRO SECTION
 	--------------------------------- */
 
-	.intro-section{ padding-top: 350px; }
+	.intro-section{ padding-top: 150px; }
 
 
 	/* ---------------------------------
@@ -107,6 +107,10 @@
 -------------------------------------------------------------------------- */
 @media only screen and (max-width: 479px) {
 
+	/* ---------------------------------
+	4. INTRO SECTION
+	--------------------------------- */
+	.intro-section{ padding-top: 100px; }
 
 }
 
@@ -124,12 +128,20 @@
 
 	header .info .right-area{ margin-left: 35px; }
 
+    /* ---------------------------------
+    4. INTRO SECTION
+    --------------------------------- */
+    .intro-section{ padding-top: 100px; }
 }
 
 /* Screens Resolution : 290px
 -------------------------------------------------------------------------- */
 @media only screen and (max-width: 290px) {
 
+    /* ---------------------------------
+    4. INTRO SECTION
+    --------------------------------- */
+    .intro-section{ padding-top: 100px; }
 	
 }
 
@@ -150,7 +162,7 @@
 	/* ---------------------------------
 	4. INTRO SECTION
 	--------------------------------- */
-
+	.intro-section{ padding-top: 50px; }
 	.intro .profile-img{ width: 80%; height: auto; top: 0; margin-bottom: 10px; }
 	
 	.intro{ padding: 20px 10px 0; margin-right: -15px; margin-left: -15px; }
