Updated portfolio with site name

--- a/04-elements/css/responsive.css
+++ b/04-elements/css/responsive.css
@@ -77,8 +77,8 @@
 	8. EDUCATION SECTION
 	--------------------------------- */
 	
-	.education-wrapper:after,
-	.education-wrapper .education:after{ display: none; }
+	.project-wrapper:after,
+	.project-wrapper .project:after{ display: none; }
 
 }
 
