--- a/01-cv-portfolio/css/responsive.css
+++ b/01-cv-portfolio/css/responsive.css
@@ -79,8 +79,8 @@
 	8. EDUCATION SECTION
 	--------------------------------- */
 	
-	.education-wrapper:after,
-	.education-wrapper .education:after{ display: none; }
+	.project-wrapper:after,
+	.project-wrapper .project:after{ display: none; }
 
 }
 
