Fixing portfolio not opening

--- a/css/styles.css
+++ b/css/styles.css
@@ -202,7 +202,7 @@ header .downlad-btn:hover{ -webkit-transform: translateY(-4px); transform: trans
     box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.2);
 }
 
-.toggle-resume {
+.toggle-portfolio {
     margin-top: 20px; 
     margin-bottom: 20px;
 }
